syntax = "proto3";

package proto;

service Foo {
    rpc Bar(EmptyRequest) returns(EmptyResponse){};
}

service Example{
    rpc Call(CallRequest) returns(CallResponse){};
}

message CallRequest {
    string name = 1;
}

message CallResponse {
    string message = 2;
}

message EmptyRequest {

}

message EmptyResponse {

}